--- a/IWatch_TableView/IWatch_TableView WatchKit App/Base.lproj/Interface.storyboard
+++ b/IWatch_TableView/IWatch_TableView WatchKit App/Base.lproj/Interface.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="9515"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="10032"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
@@ -67,6 +67,33 @@
                 </notificationController>
             </objects>
             <point key="canvasLocation" x="220" y="643"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="ES7-4V-4DU">
+            <objects>
+                <controller id="zeg-2g-Twc">
+                    <items>
+                        <table alignment="left" id="P4a-I8-ZW5">
+                            <items>
+                                <tableRow id="0d0-V1-gnq">
+                                    <group key="rootItem" width="1" alignment="left" id="xSX-jz-1zG">
+                                        <items>
+                                            <imageView width="0.25" height="0.80000000000000004" alignment="left" verticalAlignment="center" id="qyj-h5-AMi"/>
+                                            <group width="0.75" height="1" alignment="left" layout="vertical" id="QQt-is-TCU">
+                                                <items>
+                                                    <label width="1" height="0.5" alignment="left" text="Label" id="hAn-BM-s3U"/>
+                                                    <label width="1" height="0.5" alignment="left" text="Label" id="VJG-wT-2Jd"/>
+                                                </items>
+                                            </group>
+                                        </items>
+                                    </group>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="514" y="338"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
